Adjusting subject header icons

--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -55,11 +55,14 @@
                                 <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                             </ul>
                         {% endif %}
+                        
                         <a href="" class="pull-right action_icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
                         <a href="{% url 'notifications:view' subject.slug %}" class="pull-right action_icon">
                             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                             {% notifies_number subject request.user %}
                         </a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-list" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
