--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -39,6 +39,8 @@
                             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                             {% notifies_number subject request.user %}
                         </a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-list" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
