--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -1,17 +1,21 @@
+/*
+* === COMMON TAGS (Body, h4, p, etc...) and base.html ===
+*/
+
 body .container .jumbotron-inverse, body .container .well-inverse, body .container-fluid .jumbotron-inverse, body .container-fluid .well-inverse {
     background-color: white;
 }
 
 a, a:focus, a:hover {
-    color: #7B241C;
+    color: #009688;
 }
 
 .radio input[type=radio]:checked~.check, label.radio-inline input[type=radio]:checked~.check {
-    background-color: #7B241C;
+    background-color: #009688;
 }
 
 .radio input[type=radio]:checked~.circle, label.radio-inline input[type=radio]:checked~.circle {
-    border-color: #7B241C;
+    border-color: #009688;
 }
 
 .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
@@ -21,16 +25,39 @@ a, a:focus, a:hover {
 }
 
 .navbar, .navbar.navbar-default {
-    background-color: #7B241C;
+    background-color: #009688;
     color: rgba(255,255,255,.84);
 }
 
-.my-subjects-title {
-    color: #B03A2E;
+.notify_badge {
+    background-color: #FF0000 !important;
 }
 
+
+
+#btn-search:hover {
+    background: #00695C;    
+}
+
+/*
+* — Language selector —
+*/
+
+.language-selector .dropdown-menu > .active > a {
+    background: #EEEEEE;
+    color: #009688;
+}
+
+.language-selector .dropdown-menu > .active > a:hover {
+    color: #009688;
+}
+
+/*
+* — Sidebar menu in every page —
+*/
+
 #sidebar-menu .item {
-    background-color: #B03A2E;
+    background-color: #009688;
     color: white;
 }
 
@@ -39,12 +66,42 @@ a, a:focus, a:hover {
 }
 
 #sidebar-menu > .subjects_menu_active {
-    background-color: #641E16;
+    background-color: #00695C;
 }
 
 #sidebar-menu > .item:hover{
-    background-color: #641E16;
+    background-color: #00695C;
 }
+
+/*
+* === SUBJECT APP ===
+*/
+
+/*
+* — Home —
+*/
+
+.users-cloud  .small a {
+    color: #2E8B57;
+}
+
+.users-cloud  .big a {
+    color: #6B8E23;
+}
+
+.users-cloud .medium a {
+    color:  #66CDAA;
+}
+
+.users-cloud  .tiny a {
+    color: #654321;
+}
+
+
+.my-subjects-title {
+    color: #26A69A;
+}
+
 
 .panel-invisible{
     background-color: #BDBDBD !important;
@@ -52,11 +109,102 @@ a, a:focus, a:hover {
 }
 
 .category-panel > .panel-heading {
-    background-color: #666666 !important;
+    background-color: #015E96 !important;
+}
+
+.category-panel .category-header .category-card-items i {
+    color: #014e7d;
+}
+
+.category-panel .category-header .category-card-items i:hover {
+    color: #ffffff;
 }
 
 .subject-panel > .panel-heading {
-    background-color: #777777 !important;
+    background-color: #0277BD !important;
+}
+
+.subject-panel .category-header .category-card-items i {
+    color: #0267a4;
+}
+
+.subject-panel .category-header .category-card-items i:hover {
+    color: #ffffff;
+}
+
+.resource-link{
+    color: #000000 !important;
+}
+
+/*
+* — subscribe.html —
+*/
+.modal-header {
+    border-bottom: 1px solid #E6E7E8 !important; 
+}
+
+.modal-footer {
+    border-top: 1px solid #E6E7E8 !important;
+}
+
+/*
+* — subject_card.html —
+*/
+
+.access-subject {
+    background-color: #2eb82e !important;
+    color: white;
+}
+
+/*
+* — Groups App —
+*/
+
+.group-panel > .panel-heading {
+    background-color: #FFFFFF !important;
+}
+
+.group-panel .panel-title, .group-panel .category-header i, .group-panel .category-course-link  {
+    color: #000000 !important;
+}
+
+.group-panel-body {
+    background: #FFFFFF !important;
+    border-top: 1px solid #CCCCCC;
+}
+
+
+/*
+* === Resources Common (ex: PDF, WebPage ) App ===
+*/
+
+.topic-panel > .panel-heading {
+    background-color: #1d8fe0 !important;
+}
+
+.topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i {
+    color: #1772b3;
+}
+
+.topic-panel .category-header .category-card-items i:hover, .topic-panel-invisible .category-header .category-card-items i:hover {
+    color: #ffffff;
+}
+
+.topic-panel > .category-panel-content, .topic-panel-invisible > .category-panel-content {
+    background: #FFFFFF;
+}
+
+.topic-panel-invisible > .panel-heading {
+    background-color: #BDBDBD !important;
+    color: #F5F5F5;
+}
+
+.pendencies-content {
+    background: #FFFFFF;
+}
+
+.pendencies-content .core-subjects-options li {
+    background: #F5F5F5;
 }
 
 .category-header i {
@@ -68,7 +216,7 @@ a, a:focus, a:hover {
 }
 
 .category-header .dropdown-menu i {
-    color: inherit;
+    color: inherit !important;
 }
 
 #create-category {
@@ -88,11 +236,11 @@ a, a:focus, a:hover {
 
 .core-subjects-options  li.active {
     color: inherit;
-    border-bottom-color: #641E16;
+    border-bottom-color: #00695C;
 }
 
 .create-subject-btn {
-    background-color: #B03A2E;
+    background-color: #26A69A;
     color: white;
 }
 
@@ -100,8 +248,14 @@ a, a:focus, a:hover {
     background: #FFFFFF;
 }
 
+/*
+* === Amadeus APP ===
+*/
+
+
+
 .navbar-brand:hover {
-    background: #641E16 !important;
+    background: #00695C !important;
 }
 
 .navbar .project_name {
@@ -109,24 +263,21 @@ a, a:focus, a:hover {
 }
 
 .navbar-nav li.open {
-    background: #641E16;
+    background: #00695C;
 }
 
 .navbar-nav li > a:hover {
-    background: #641E16 !important;
+    background: #00695C !important;
 }
 
 .navbar-nav li.settings_menu_active {
-    background: #641E16;    
+    background: #00695C    
 }
 
 .top-search {
     color: #F5F5F5;
 }
 
-#btn-search:hover {
-    background: #641E16;    
-}
 
 .dropdown-menu {
     background: #F5F5F5;
@@ -154,43 +305,40 @@ a, a:focus, a:hover {
 }
 
 #system_accordion > .panel > .panel-heading > a > .panel-title:hover {
-    color: #7B241C;
+    color: #009688;
 }
 
 #system_accordion > .panel > .panel-heading > a:hover {
-    color: #7B241C;
+    color: #009688;
 }
 
 #system_menu {
     background: #F5F5F5;
 }
 
-.modal-header {
-    border-bottom: 1px solid #E6E7E8 !important; 
-}
-
-.modal-footer {
-    border-top: 1px solid #E6E7E8 !important;
-}
 
 #horizontal-line{
     background-color: black;
 }
 
 .breadcrumb > li > span.divider {
-    color: #B03A2E;
+    color: #26A69A;
 }
 
 .breadcrumb > li > a{
-    color: #B03A2E;
+    color: #26A69A;
 }
 
 .breadcrumb > li {
     color: #BDBDBD;
 }
 
-.panel-title{ /*Because we use an outer a tag*/
+.panel-title { /*Because we use an outer a tag*/
     color: rgba(255,255,255,.84);
+}
+
+.category-header > h4.panel-title span {
+    color: #FFFFFF;
 }
 
 .accordion {
@@ -229,13 +377,10 @@ a, a:focus, a:hover {
     border-bottom: 1px solid #D2D2D2;
 }
 
-.bottom-menu {
-    background: #B03A2E;
-}
 
 .mobile-menu .item {
     color: #FFFFFF;
-    background: #B03A2E;
+    background: #009688;
 }
 
 .mobile-menu .item a {
@@ -243,17 +388,13 @@ a, a:focus, a:hover {
 }
 
 .mobile-menu > .subjects_menu_active {
-    background-color: #641E16;
+    background-color: #00695C;
 }
 
 .mobile-menu > .item:hover{
-    background-color: #641E16;
+    background-color: #00695C;
 }
 
-.access-subject {
-    background-color: #2eb82e !important;
-    color: white;
-}
 
 .page_selector h4 {
     border-bottom: 1px solid #e5e5e5;
@@ -299,7 +440,223 @@ a, a:focus, a:hover {
 }
 
 .holder a.jp-current, a.jp-current:hover {
-    background: #337ab7;
+    background: #039BE5;
     color: #FFFFFF;
-    border-color: #337ab7;
+    border-color: #039BE5;
+}
+
+
+/*
+* — Pendencies Form —
+*/
+
+.notifies {
+    border: 1px solid #EEEEEE;
+}
+
+.bootstrap-datetimepicker-widget {
+    background-color: #fff;
+}
+
+.notifies a.delete-row {
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+    background-color: #EEE;
+    color: rgba(0,0,0,.87);
+}
+
+a.add-row {
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);    
+    background-color: #59b75c;
+    color: rgba(255,255,255,.84);
+}
+
+
+/*
+* — Resource List on topic templates —
+*/
+
+.resource_list > .list-group-item {
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+.resource_list > .disabled {
+    background-color: #eee;
+}
+
+.resource_list > .disabled:hover {
+    background-color: #eee !important;   
+}
+
+.resource_list > .disabled a.resource_link {
+    color: #BDBDBD;
+}
+
+.resource_list > .list-group-item:hover {
+    background: #F5F5F5;
+}
+
+.resource_list > .list-group-item:last-child {
+    border-bottom: 1px solid #ddd !important;
+}
+
+.resource_list .category-card-items i {
+    color: #e5e5e5;
+}
+
+.resource_list .category-card-items i:hover {
+    color: #7f7f7f;
+}
+
+.resource_list .category-card-items .dropdown-menu i {
+    color: #333;
+}
+
+.resource_list a {
+    color: inherit;
+}
+
+.resource_list .btn-group button:active, .resource_list .btn-group button:focus, .resource_list .btn-group button:hover {
+    background-color: initial !important;
+}
+
+
+
+#search-results-title{
+    color: #BDBDBD;
+}
+
+
+.no-subscribe-btn{
+    background-color: #BDBDBD !important;
+    color: #F5F5F5 !important;
+}
+
+.pendency {
+    border-color: #CCCCCC;
+}
+
+.pendency .breadcrumb {
+    background-color: #FFFFFF;
+}
+
+.pendency .meta {
+    color: #FF0000;
+}
+
+.alert-low, .alert-medium {
+    background-color: #FFA500;
+    color: #FFFFFF;
+}
+
+.no_button:hover, .no_button:focus, .no_button:active {
+    background-color: initial !important;
+}
+
+.popover {
+    background: #FFF;
+    color: #333;
+}
+
+.mural .post_make {
+    background: #FFFFFF;
+}
+
+.mural .post_make .user-img, .post .post-img, .post .post-comment .user-img div, .comment .comment-img div {
+    background: #CCCCCC;
+}
+
+.mural .post_make .post-field div {
+    border-color: #CCCCCC;
+}
+
+.mural .post_make .post-field h4 {
+    color: #CCCCCC;
+}
+
+.post_action i, .post .post-user .user-action i, .comment .comment-user .user-action i {
+    color: #1d8fe0;
+}
+
+.post .post-user, .comment .comment-user, .marked_user {
+    color: #26A69A;
+}
+
+.post .post-user .user-action {
+    color: #BBBBBB;
+}
+
+.post .time {
+    color: #ABABAB;
+}
+
+.post .post-comment {
+    border-top-color: #888888;
+    background: #e5e5e5;
+}
+
+.post .post-comment .comment-field div {
+    border-color: #888888;
+    background: #FFFFFF;
+}
+
+.comment-section {
+    background: #f5f5f5;
+    border-top-color: #AAAAAA;
+}
+
+.comment .comment-user .user-action {
+    color: #999999;
+}
+
+.comment-time {
+    color: #9A9A9A;
+}
+
+.btn_unfav {
+    color: #FF0000 !important;
+}
+
+.btn_fav {
+    color: #BBBBBB !important;
+}
+
+.post-filter {
+    background: #f5f5f5;
+}
+
+.post-filter h4 {
+    color: #26A69A;
+}
+
+.post-filter label {
+    color: #333333;
+}
+
+.post-filter i {
+    color: #FF0000;
+}
+
+.suggestions {
+    background: #FFFFFF;
+}
+
+.mural-category {
+    background: #EEE;
+}
+
+.btn:not(.btn-raised):not(.btn-link):focus, .btn:not(.btn-raised):not(.btn-link):hover, .input-group-btn .btn:not(.btn-raised):not(.btn-link):focus, .input-group-btn .btn:not(.btn-raised):not(.btn-link):hover {
+    background-color: initial;
+}
+
+
+@media(max-width: 768px) {
+    .navbar .navbar-nav .dropdown .dropdown-menu li > a {
+        color: #333333 !important;
+    }
+    .navbar .navbar-nav .dropdown .dropdown-menu li > a:hover {
+        color: #009688 !important;
+    }
 }
