solved issue on language selector on responsive view

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -50,6 +50,10 @@
 		display: block !important;
 	}
 
+	.language-selector-on-header .no-title{
+		display:none;
+	}
+
 	.language-selector-on-header img{
 		display: none;
 	}
