--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -1,662 +1,475 @@
-/*
-* === COMMON TAGS (Body, h4, p, etc...) and base.html ===
-*/
-
 body .container .jumbotron-inverse, body .container .well-inverse, body .container-fluid .jumbotron-inverse, body .container-fluid .well-inverse {
-    background-color: white;
-}
+  background-color: white; }
 
 a, a:focus, a:hover {
-    color: #009688;
-}
+  color: #FF3333; }
 
-.radio input[type=radio]:checked~.check, label.radio-inline input[type=radio]:checked~.check {
-    background-color: #009688;
-}
+.radio input[type=radio]:checked ~ .check, label.radio-inline input[type=radio]:checked ~ .check {
+  background-color: #FF3333; }
 
-.radio input[type=radio]:checked~.circle, label.radio-inline input[type=radio]:checked~.circle {
-    border-color: #009688;
-}
+.radio input[type=radio]:checked ~ .circle, label.radio-inline input[type=radio]:checked ~ .circle {
+  border-color: #FF3333; }
 
 .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #337ab7;
-}
+  color: #fff;
+  background-color: #FF3333;
+  border-color: #FF3333; }
 
 .navbar, .navbar.navbar-default {
-    background-color: #009688;
-    color: rgba(255,255,255,.84);
-}
+  background-color: #FF3333;
+  color: rgba(255, 255, 255, 0.84); }
 
 .notify_badge {
-    background-color: #FF0000 !important;
-}
+  background-color: #FF0000 !important; }
 
-
+.bottom-menu {
+  background: #FF3333; }
 
 #btn-search:hover {
-    background: #00695C;    
-}
+  background: #669999; }
 
-/*
-* — Language selector —
-*/
-
+/* language selector */
 .language-selector .dropdown-menu > .active > a {
-    background: #EEEEEE;
-    color: #009688;
-}
+  background: #EEEEEE;
+  color: #FF3333; }
 
 .language-selector .dropdown-menu > .active > a:hover {
-    color: #009688;
-}
+  color: #FF3333; }
 
-/*
-* — Sidebar menu in every page —
-*/
-
+/* Sidebar menu in every page */
 #sidebar-menu .item {
-    background-color: #009688;
-    color: white;
-}
+  background-color: #FF3333;
+  color: white; }
 
-#sidebar-menu .item a{
-    color: white;
-}
+#sidebar-menu .item a {
+  color: white; }
 
 #sidebar-menu > .subjects_menu_active {
-    background-color: #00695C;
-}
+  background-color: #669999; }
 
-#sidebar-menu > .item:hover{
-    background-color: #00695C;
-}
+#sidebar-menu > .item:hover {
+  background-color: #669999; }
 
-/*
-* === SUBJECT APP ===
-*/
+/* === SUBJECT APP === */
+/* home */
+.users-cloud .small a {
+  color: #2E8B57; }
 
-/*
-* — Home —
-*/
-
-.users-cloud  .small a {
-    color: #2E8B57;
-}
-
-.users-cloud  .big a {
-    color: #6B8E23;
-}
+.users-cloud .big a {
+  color: #6B8E23; }
 
 .users-cloud .medium a {
-    color:  #66CDAA;
-}
+  color: #66CDAA; }
 
-.users-cloud  .tiny a {
-    color: #654321;
-}
-
+.users-cloud .tiny a {
+  color: #654321; }
 
 .my-subjects-title {
-    color: #26A69A;
-}
+  color: #003333; }
 
-
-.panel-invisible{
-    background-color: #BDBDBD !important;
-    color: #F5F5F5;
-}
+.panel-invisible {
+  background-color: #BDBDBD !important;
+  color: #F5F5F5; }
 
 .category-panel > .panel-heading {
-    background-color: #015E96 !important;
-}
+  background-color: #669999 !important; }
 
 .category-panel .category-header .category-card-items i {
-    color: #014e7d;
-}
+  color: #014e7d; }
 
 .category-panel .category-header .category-card-items i:hover {
-    color: #ffffff;
-}
+  color: #FFFFFF; }
 
 .subject-panel > .panel-heading {
-    background-color: #0277BD !important;
-}
+  background-color: #669999 !important; }
 
 .subject-panel .category-header .category-card-items i {
-    color: #0267a4;
-}
+  color: #003333; }
 
 .subject-panel .category-header .category-card-items i:hover {
-    color: #ffffff;
-}
+  color: #FFFFFF; }
 
-.resource-link{
-    color: #000000 !important;
-}
+.resource-link {
+  color: #000000 !important; }
 
-/*
-* — subscribe.html —
-*/
+/* subscribe.html */
 .modal-header {
-    border-bottom: 1px solid #E6E7E8 !important; 
-}
+  border-bottom: 1px solid #999999 !important; }
 
 .modal-footer {
-    border-top: 1px solid #E6E7E8 !important;
-}
+  border-top: 1px solid #999999 !important; }
 
-/*
-* — subject_card.html —
-*/
-
+/* subject_card.html */
 .access-subject {
-    background-color: #2eb82e !important;
-    color: white;
-}
+  background-color: #2eb82e !important;
+  color: white; }
 
-/*
-* — Groups App —
-*/
-
+/* Groups App */
 .group-panel > .panel-heading {
-    background-color: #FFFFFF !important;
-}
+  background-color: #FFFFFF !important; }
 
-.group-panel .panel-title, .group-panel .category-header i, .group-panel .category-course-link  {
-    color: #000000 !important;
-}
+.group-panel .panel-title, .group-panel .category-header i, .group-panel .category-course-link {
+  color: #000000 !important; }
 
 .group-panel-body {
-    background: #FFFFFF !important;
-    border-top: 1px solid #CCCCCC;
-}
+  background: #FFFFFF !important;
+  border-top: 1px solid #CCCCCC; }
 
-
-/*
-* === Resources Common (ex: PDF, WebPage ) App ===
-*/
-
+/* === Resources Common (ex: PDF, WebPage) App === */
 .topic-panel > .panel-heading {
-    background-color: #1d8fe0 !important;
-}
+  background-color: #1d8fe0 !important; }
 
 .topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i {
-    color: #1772b3;
-}
+  color: #1772b3; }
 
 .topic-panel .category-header .category-card-items i:hover, .topic-panel-invisible .category-header .category-card-items i:hover {
-    color: #ffffff;
-}
+  color: #FFFFFF; }
 
 .topic-panel > .category-panel-content, .topic-panel-invisible > .category-panel-content {
-    background: #FFFFFF;
-}
+  background: #FFFFFF; }
 
 .topic-panel-invisible > .panel-heading {
-    background-color: #BDBDBD !important;
-    color: #F5F5F5;
-}
+  background-color: #BDBDBD !important;
+  color: #F5F5F5; }
 
 .pendencies-content {
-    background: #FFFFFF;
-}
+  background: #FFFFFF; }
 
 .pendencies-content .core-subjects-options li {
-    background: #F5F5F5;
-}
+  background: #F5F5F5; }
 
 .category-header i {
-    color: white;
-}
+  color: white; }
 
-.category-header i:hover{
-    color: #90CAF9;
-}
+.category-header i:hover {
+  color: #90CAF9; }
 
 .category-header .dropdown-menu i {
-    color: inherit !important;
-}
+  color: inherit !important; }
 
 #create-category {
-    background-color: #66BB6A;
-    color: #FFFFFF;
-}
+  background-color: #66BB6A;
+  color: #FFFFFF; }
 
 .category-panel-content {
-    background: #F5F5F5;
-}
+  background: #F5F5F5; }
 
-.core-subjects-options  li {
-    background-color: #FFFFFF;
-    border-bottom-color: #D2D2D2;
-    color: #A0A0A0;
-}
+.core-subjects-options li {
+  background-color: #FFFFFF;
+  border-bottom-color: #D2D2D2;
+  color: #A0A0A0; }
 
-.core-subjects-options  li.active {
-    color: inherit;
-    border-bottom-color: #00695C;
-}
+.core-subjects-options li.active {
+  color: inherit;
+  border-bottom-color: #669999; }
 
 .create-subject-btn {
-    background-color: #26A69A;
-    color: white;
-}
+  background-color: #003333;
+  color: white; }
 
 #coordinators_accordion .panel-heading, #professors_accordion .panel-heading {
-    background: #FFFFFF;
-}
+  background: #FFFFFF; }
 
-/*
-* === Amadeus APP ===
-*/
-
-
-
+/* === Amadeus APP === */
 .navbar-brand:hover {
-    background: #00695C !important;
-}
+  background: #669999 !important; }
 
 .navbar .project_name {
-    color: white;
-}
+  color: white; }
 
 .navbar-nav li.open {
-    background: #00695C;
-}
+  background: #669999; }
 
 .navbar-nav li > a:hover {
-    background: #00695C !important;
-}
+  background: #669999 !important; }
 
 .navbar-nav li.settings_menu_active {
-    background: #00695C    
-}
+  background: #669999; }
 
 .top-search {
-    color: #F5F5F5;
-}
-
+  color: #F5F5F5; }
 
 .dropdown-menu {
-    background: #F5F5F5;
-}
+  background: #F5F5F5; }
 
 .dropdown-menu li > a {
-    background: #F5F5F5;
-    color: #333333;
-}
+  background: #F5F5F5;
+  color: #333333; }
 
 .dropdown-menu li > a:hover {
-    background: #EEEEEE !important;
-}
+  background: #EEEEEE !important; }
 
 #system_accordion > .panel > .panel-heading {
-    background: #F5F5F5;
-}
+  background: #F5F5F5; }
 
 #system_accordion > .panel > .panel-heading:hover {
-    background: #EEEEEE;
-}
+  background: #EEEEEE; }
 
 #system_accordion > .panel > .panel-heading > a > .panel-title {
-    color: #333333;
-}
+  color: #333333; }
 
 #system_accordion > .panel > .panel-heading > a > .panel-title:hover {
-    color: #009688;
-}
+  color: #FF3333; }
 
 #system_accordion > .panel > .panel-heading > a:hover {
-    color: #009688;
-}
+  color: #FF3333; }
 
 #system_menu {
-    background: #F5F5F5;
-}
+  background: #F5F5F5; }
 
-
-#horizontal-line{
-    background-color: black;
-}
+#horizontal-line {
+  background-color: black; }
 
 .breadcrumb > li > span.divider {
-    color: #26A69A;
-}
+  color: #003333; }
 
-.breadcrumb > li > a{
-    color: #26A69A;
-}
+.breadcrumb > li > a {
+  color: #003333; }
 
 .breadcrumb > li {
-    color: #BDBDBD;
-}
+  color: #BDBDBD; }
 
-.panel-title { /*Because we use an outer a tag*/
-    color: rgba(255,255,255,.84);
-}
+/*Because we use an outer a tag */
+.panel-title {
+  color: rgba(255, 255, 255, 0.84); }
 
 .category-header > h4.panel-title span {
-    color: #FFFFFF;
-}
+  color: #FFFFFF; }
 
 .accordion {
-    background: white;
-}
+  background: white; }
 
 .accordion_list {
-    background: #F5F5F5;
-}
+  background: #F5F5F5; }
 
 .outside-title {
-    color: #43a251;
-}
+  color: #43a251; }
 
 .titleTopic a h4, .titleTopic h4 {
-    color: white;
-}
+  color: white; }
 
-.Topic-detail a h4{
-    color: black;
-}
+.Topic-detail a h4 {
+  color: black; }
 
 .cards-detail .panel .panel-heading h4 {
-    color:black;
-}
+  color: black; }
 
-.data_register_course p { 
-    color: grey; 
-}
+.data_register_course p {
+  color: grey; }
 
 .category-course-link {
-    color: #FFFFFF !important;
-}
+  color: #FFFFFF !important; }
 
 .profile_function {
-    border-bottom: 1px solid #D2D2D2;
-}
-
+  border-bottom: 1px solid #D2D2D2; }
 
 .mobile-menu .item {
-    color: #FFFFFF;
-    background: #009688;
-}
+  color: #FFFFFF;
+  background: #FF3333; }
 
 .mobile-menu .item a {
-    color: white;
-}
+  color: white; }
 
 .mobile-menu > .subjects_menu_active {
-    background-color: #00695C;
-}
+  background-color: #669999; }
 
-.mobile-menu > .item:hover{
-    background-color: #00695C;
-}
-
+.mobile-menu > .item:hover {
+  background-color: #669999; }
 
 .page_selector h4 {
-    border-bottom: 1px solid #e5e5e5;
-}
+  border-bottom: 1px solid #e5e5e5; }
 
 .subscribe-subject {
-    background-color: #33cc33 !important;
-    color:white;
-}
+  background-color: #33cc33 !important;
+  color: white; }
 
 .filedrag {
-    color: #555;
-    border: 2px dashed #555;
-}
+  color: #555;
+  border: 2px dashed #555; }
 
 .footer {
-    color: #FFFFFF;
-    background: #26A69A;
-}
+  color: #FFFFFF;
+  background: #003333; }
 
 .no-subjects {
-    color: #999999;
-}
+  color: #999999; }
 
 .holder a.jp-disabled, a.jp-disabled:hover {
-    background: none !important;
-    color: #bbb !important;
-}
+  background: none !important;
+  color: #bbb !important; }
 
 .holder a.jp-current, a.jp-current:hover {
-    background: none;
-}
+  background: none; }
 
 .holder a, .holder span {
-    border: 1px solid #ddd;
-    color: #337ab7;
-}
+  border: 1px solid #ddd;
+  color: #337ab7; }
 
 .holder a:hover {
-    color: #23527c;
-    background-color: #eee;
-    border-color: #ddd;
-}
+  color: #23527c;
+  background-color: #eee;
+  border-color: #ddd; }
 
 .holder a.jp-current, a.jp-current:hover {
-    background: #039BE5;
-    color: #FFFFFF;
-    border-color: #039BE5;
-}
+  background: #039BE5;
+  color: #FFFFFF;
+  border-color: #039BE5; }
 
-
-/*
-* — Pendencies Form —
-*/
-
+/* Pendencies Form */
 .notifies {
-    border: 1px solid #EEEEEE;
-}
+  border: 1px solid #EEEEEE; }
 
 .bootstrap-datetimepicker-widget {
-    background-color: #fff;
-}
+  background-color: #fff; }
 
 .notifies a.delete-row {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-    background-color: #EEE;
-    color: rgba(0,0,0,.87);
-}
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  background-color: #EEE;
+  color: rgba(0, 0, 0, 0.87); }
 
 a.add-row {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);    
-    background-color: #59b75c;
-    color: rgba(255,255,255,.84);
-}
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  background-color: #59b75c;
+  color: rgba(255, 255, 255, 0.84); }
 
-
-/*
-* — Resource List on topic templates —
-*/
-
+/* Resource list on topic templates */
 .resource_list > .list-group-item {
-    background-color: #fff;
-    border: 1px solid #ddd;
-}
+  background-color: #fff;
+  border: 1px solid #ddd; }
 
 .resource_list > .disabled {
-    background-color: #eee;
-}
+  background-color: #eee; }
 
 .resource_list > .disabled:hover {
-    background-color: #eee !important;   
-}
+  background-color: #eee !important; }
 
 .resource_list > .disabled a.resource_link {
-    color: #BDBDBD;
-}
+  color: #BDBDBD; }
 
 .resource_list > .list-group-item:hover {
-    background: #F5F5F5;
-}
+  background: #F5F5F5; }
 
 .resource_list > .list-group-item:last-child {
-    border-bottom: 1px solid #ddd !important;
-}
+  border-bottom: 1px solid #ddd !important; }
 
 .resource_list .category-card-items i {
-    color: #e5e5e5;
-}
+  color: #e5e5e5; }
 
 .resource_list .category-card-items i:hover {
-    color: #7f7f7f;
-}
+  color: #7f7f7f; }
 
 .resource_list .category-card-items .dropdown-menu i {
-    color: #333;
-}
+  color: #333; }
 
 .resource_list a {
-    color: inherit;
-}
+  color: inherit; }
 
 .resource_list .btn-group button:active, .resource_list .btn-group button:focus, .resource_list .btn-group button:hover {
-    background-color: initial !important;
-}
+  background-color: initial !important; }
 
+#search-results-title {
+  color: #BDBDBD; }
 
-
-#search-results-title{
-    color: #BDBDBD;
-}
-
-
-.no-subscribe-btn{
-    background-color: #BDBDBD !important;
-    color: #F5F5F5 !important;
-}
+.no-subscribe-btn {
+  background-color: #BDBDBD !important;
+  color: #F5F5F5 !important; }
 
 .pendency {
-    border-color: #CCCCCC;
-}
+  border-color: #CCCCCC; }
 
 .pendency .breadcrumb {
-    background-color: #FFFFFF;
-}
+  background-color: #FFFFFF; }
 
 .pendency .meta {
-    color: #FF0000;
-}
+  color: #FF0000; }
 
 .alert-low, .alert-medium {
-    background-color: #FFA500;
-    color: #FFFFFF;
-}
+  background-color: #FFA500;
+  color: #FFFFFF; }
 
 .no_button:hover, .no_button:focus, .no_button:active {
-    background-color: initial !important;
-}
+  background-color: initial !important; }
 
 .popover {
-    background: #FFF;
-    color: #333;
-}
+  background: #FFF;
+  color: #333; }
 
 .mural .post_make {
-    background: #FFFFFF;
-}
+  background: #FFFFFF; }
 
 .mural .post_make .user-img, .post .post-img, .post .post-comment .user-img div, .comment .comment-img div {
-    background: #CCCCCC;
-}
+  background: #CCCCCC; }
 
 .mural .post_make .post-field div {
-    border-color: #CCCCCC;
-}
+  border-color: #CCCCCC; }
 
 .mural .post_make .post-field h4 {
-    color: #CCCCCC;
-}
+  color: #CCCCCC; }
 
 .post_action i, .post .post-user .user-action i, .comment .comment-user .user-action i {
-    color: #1d8fe0;
-}
+  color: #1d8fe0; }
 
 .post .post-user, .comment .comment-user, .marked_user {
-    color: #26A69A;
-}
+  color: #003333; }
 
 .post .post-user .user-action {
-    color: #BBBBBB;
-}
+  color: #BBBBBB; }
 
 .post .time {
-    color: #ABABAB;
-}
+  color: #ABABAB; }
 
 .post .post-comment {
-    border-top-color: #888888;
-    background: #e5e5e5;
-}
+  border-top-color: #888888;
+  background: #e5e5e5; }
 
 .post .post-comment .comment-field div {
-    border-color: #888888;
-    background: #FFFFFF;
-}
+  border-color: #888888;
+  background: #FFFFFF; }
 
 .comment-section {
-    background: #f5f5f5;
-    border-top-color: #AAAAAA;
-}
+  background: #F5F5F5;
+  border-top-color: #AAAAAA; }
 
 .comment .comment-user .user-action {
-    color: #999999;
-}
+  color: #999999; }
 
 .comment-time {
-    color: #9A9A9A;
-}
+  color: #9A9A9A; }
 
 .btn_unfav {
-    color: #FF0000 !important;
-}
+  color: #FF0000 !important; }
 
 .btn_fav {
-    color: #BBBBBB !important;
-}
+  color: #BBBBBB !important; }
 
 .post-filter {
-    background: #f5f5f5;
-}
+  background: #F5F5F5; }
 
 .post-filter h4 {
-    color: #26A69A;
-}
+  color: #003333; }
 
 .post-filter label {
-    color: #333333;
-}
+  color: #333333; }
 
 .post-filter i {
-    color: #FF0000;
-}
+  color: #FF0000; }
 
 .suggestions {
-    background: #FFFFFF;
-}
+  background: #FFFFFF; }
 
 .mural-category {
-    background: #EEE;
-}
+  background: #EEE; }
 
 .btn:not(.btn-raised):not(.btn-link):focus, .btn:not(.btn-raised):not(.btn-link):hover, .input-group-btn .btn:not(.btn-raised):not(.btn-link):focus, .input-group-btn .btn:not(.btn-raised):not(.btn-link):hover {
-    background-color: initial;
-}
-
+  background-color: initial; }
 
 @media(max-width: 768px) {
-    .navbar .navbar-nav .dropdown .dropdown-menu li > a {
-        color: #333333 !important;
-    }
-    .navbar .navbar-nav .dropdown .dropdown-menu li > a:hover {
-        color: #009688 !important;
-    }
-}
+  .navbar .navbar-nav .dropdown .dropdown-menu li > a {
+    color: #333333 !important; }
+
+  .navbar .navbar-nav .dropdown .dropdown-menu li > a:hover {
+    color: #FF3333 !important; } }
+
+/*# sourceMappingURL=red.css.map */
