--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -28,6 +28,34 @@ a, a:focus, a:hover {
 #btn-search:hover {
   background: #669999; }
 
+.btn.btn-sucess.btn-raised {
+  color: #FFFFFF;
+  background-color: #FF3333 !important; }
+
+button.btn.btn-sucess.btn-raised {
+  color: #FFFFFF;
+  background-color: #FF3333 !important; }
+
+a.btn.btn-sm.btn-success.btn-raised {
+  color: #FFFFFF;
+  background-color: #FF3333 !important; }
+
+.btn-group-raised .btn.btn-success,
+.btn-group-raised .input-group-btn .btn.btn-success,
+.btn.btn-fab.btn-success, .btn.btn-raised.btn-success,
+.input-group-btn .btn.btn-fab.btn-success,
+.input-group-btn .btn.btn-raised.btn-success {
+  color: #FFFFFF;
+  background-color: #FF3333 !important; }
+
+.btn-group-raised .btn.btn-success :hover,
+.btn-group-raised .input-group-btn .btn.btn-success :hover,
+.btn.btn-fab.btn-success, .btn.btn-raised.btn-success:hover,
+.input-group-btn .btn.btn-fab.btn-success:hover,
+.input-group-btn .btn.btn-raised.btn-success:hover {
+  color: #FFFFFF;
+  background-color: #669999 !important; }
+
 /* language selector */
 .language-selector .dropdown-menu > .active > a {
   background: #EEEEEE;
@@ -117,10 +145,10 @@ a, a:focus, a:hover {
 
 /* === Resources Common (ex: PDF, WebPage) App === */
 .topic-panel > .panel-heading {
-  background-color: #1d8fe0 !important; }
+  background-color: #669999 !important; }
 
 .topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i {
-  color: #1772b3; }
+  color: #003333; }
 
 .topic-panel .category-header .category-card-items i:hover, .topic-panel-invisible .category-header .category-card-items i:hover {
   color: #FFFFFF; }
@@ -148,7 +176,7 @@ a, a:focus, a:hover {
   color: inherit !important; }
 
 #create-category {
-  background-color: #66BB6A;
+  background-color: #FF3333;
   color: #FFFFFF; }
 
 .category-panel-content {
@@ -156,8 +184,8 @@ a, a:focus, a:hover {
 
 .core-subjects-options li {
   background-color: #FFFFFF;
-  border-bottom-color: #D2D2D2;
-  color: #A0A0A0; }
+  border-bottom-color: #999999;
+  color: #669999; }
 
 .core-subjects-options li.active {
   color: inherit;
@@ -409,7 +437,7 @@ a.add-row {
   color: #CCCCCC; }
 
 .post_action i, .post .post-user .user-action i, .comment .comment-user .user-action i {
-  color: #1d8fe0; }
+  color: #669999; }
 
 .post .post-user, .comment .comment-user, .marked_user {
   color: #003333; }
