--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -1,6 +1,9 @@
 //Primary colors
-$primary-color: #FF3333 //lighter shade of red
-$secondary-color: #669999 //lighter shade of green
+$primary-color: #8e1c1c //lighter shade of red
+$primary-hover: #591111
+$secondary-color: #136363 //lighter shade of green
+$secondary-l2-color: #146b6b //subject header and items color
+$third-color: #197f7f
 $default-white: #F5F5F5
 $white: #FFFFFF
 $disabled: #999999 //light shade of gray
@@ -75,7 +78,7 @@ a.btn.btn-sm.btn-success.btn-raised
 .input-group-btn .btn.btn-fab.btn-success:hover , 
 .input-group-btn .btn.btn-raised.btn-success:hover
     color: $white
-    background-color: $secondary-color !important
+    background-color: $primary-hover !important
 
 
 /* language selector */
@@ -102,11 +105,11 @@ a.btn.btn-sm.btn-success.btn-raised
 
 
 #sidebar-menu > .subjects_menu_active 
-    background-color: $secondary-color
+    background-color: $primary-hover
 
 
 #sidebar-menu > .item:hover
-    background-color: $secondary-color
+    background-color: $primary-hover
 
 
 /* === SUBJECT APP === */
@@ -145,7 +148,7 @@ a.btn.btn-sm.btn-success.btn-raised
 
 
 .category-panel .category-header .category-card-items i 
-    color: #014e7d
+    color: $strong-color
 
 
 .category-panel .category-header .category-card-items i:hover 
@@ -153,7 +156,7 @@ a.btn.btn-sm.btn-success.btn-raised
 
 
 .subject-panel > .panel-heading 
-    background-color: $secondary-color !important
+    background-color: $secondary-l2-color !important
 
 
 .subject-panel .category-header .category-card-items i 
@@ -206,7 +209,7 @@ a.btn.btn-sm.btn-success.btn-raised
 
 
 .topic-panel > .panel-heading 
-    background-color: $secondary-color !important
+    background-color: $third-color !important
 
 
 .topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i 
@@ -413,11 +416,11 @@ a.btn.btn-sm.btn-success.btn-raised
 
 
 .mobile-menu > .subjects_menu_active 
-    background-color: $secondary-color
+    background-color: $primary-color
 
 
 .mobile-menu > .item:hover
-    background-color: $secondary-color
+    background-color: $primary-hover
 
 
 
