fixed topic panel header

--- a/amadeus/static/css/themes/black.css
+++ b/amadeus/static/css/themes/black.css
@@ -145,7 +145,7 @@ a.btn.btn-sm.btn-success.btn-raised {
 
 /* === Resources Common (ex: PDF, WebPage) App === */
 .topic-panel > .panel-heading {
-  background-color: #197f7f !important; }
+  background-color: #5e6262 !important; }
 
 .topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i {
   color: #3b444b; }
