--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -3,7 +3,7 @@ $primary-color: #0e1111 //lighter shade of red
 $primary-hover: #474b4b
 $secondary-color: #232b2b //lighter shade of green
 $secondary-l2-color: #353839 //subject header and items color
-$third-color: #197f7f
+$third-color: #5e6262
 $default-white: #F5F5F5
 $white: #FFFFFF
 $disabled: #414a4c //light shade of gray
