--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -117,19 +117,19 @@ a.btn.btn-sm.btn-success.btn-raised
 /* home */
 
 .users-cloud  .small a 
-    color: #2E8B57
+    color: $secondary-color
 
 
 .users-cloud  .big a 
-    color: #6B8E23
+    color: $primary-color
 
 
 .users-cloud .medium a 
-    color:  #66CDAA
+    color:  gray
 
 
 .users-cloud  .tiny a 
-    color: #654321
+    color: $third-color
 
 
 
