--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -80,6 +80,14 @@ a.btn.btn-sm.btn-success.btn-raised
     color: $white
     background-color: $primary-hover !important
 
+/* PAGINATION BOTTOM */
+
+.pagination > li > a, .pagination > li > span
+    color: $primary-color
+
+.pagination > li > a:hover, .pagination > li > span:hover
+    color: $primary-hover   
+
 
 /* language selector */
 
