--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -81,6 +81,15 @@ a.btn.btn-sm.btn-success.btn-raised
     background-color: $primary-hover !important
 
 
+/* PAGINATION BOTTOM */
+
+.pagination > li > a, .pagination > li > span
+    color: $primary-color
+
+.pagination > li > a:hover, .pagination > li > span:hover
+    color: $primary-hover   
+
+
 /* language selector */
 
 
@@ -117,19 +126,19 @@ a.btn.btn-sm.btn-success.btn-raised
 /* home */
 
 .users-cloud  .small a 
-    color: #2E8B57
+    color: $secondary-l2-color
 
 
 .users-cloud  .big a 
-    color: #6B8E23
+    color: $primary-color
 
 
 .users-cloud .medium a 
-    color:  #66CDAA
+    color:  $primary-hover
 
 
 .users-cloud  .tiny a 
-    color: #654321
+    color: $secondary-color
 
 
 
@@ -284,7 +293,7 @@ a.btn.btn-sm.btn-success.btn-raised
 
 
 .navbar-brand:hover 
-    background: $secondary-color !important
+    background: $primary-hover !important
 
 
 .navbar .project_name 
