--- a/mural/templates/mural/list_category.html
+++ b/mural/templates/mural/list_category.html
@@ -17,7 +17,7 @@
     <div id="core-subjects-options-div">
         <ul class="core-subjects-options">
             <a href="{% url 'mural:manage_general' %}"><li>{% trans "General" %} ({{ totals.general }})</li></a>
-            <a href="{% url 'mural:manage_category' %}"><li class="active">{% trans "Per Category" %} ({{ totals.category }})</li></a>
+            <a href="{% url 'mural:manage_category' %}"><li class="active">{% trans "Per Category" %} (<span class="cat_badge">{{ totals.category }}</span>)</li></a>
             <a href=""><li>{% trans "Per Subject" %} ({{ totals.subject }})</li></a>
         </ul>
     </div>
